Never fail fast

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -8,6 +8,7 @@ jobs:
     build:
         # Make sure this builds on a wide variety of systems
         strategy:
+            fail-fast: false
             matrix:
                 build_type:
                     - Release
