--- a/.github/workflows/testreport.yml
+++ b/.github/workflows/testreport.yml
@@ -18,6 +18,7 @@ jobs:
         runs-on: ubuntu-latest
 
         strategy:
+            fail-fast: false
             matrix:
                 build_type:
                     - Release
